--- a/pagina2.html
+++ b/pagina2.html
@@ -51,6 +51,18 @@
         footer {
             padding-left: 20px; /* Adiciona espaçamento à esquerda */
         }
+        button {
+            border: 3px solid rgb(136, 130, 130);
+            color: rgb(97, 71, 189);
+            padding: 5px 15px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 2px 2px;
+            cursor: pointer;
+            border-radius: 25px;
+        }
 
 
 
@@ -59,6 +71,7 @@
 <body>
     
     <header>
+        <a href="pagina1.html"><button>Voltar</button></a>
         <nav>
             <ul>
                 <li><a href="pagina1.html">GALERIA</a></li>
