--- a/pagina3.html
+++ b/pagina3.html
@@ -10,6 +10,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      background-color: rgba(99, 25, 25, 1);
     }
 
     header {
@@ -55,10 +56,23 @@
       font-size: 25px;
       text-align: center;
     }
+    button {
+            border: 3px solid rgb(136, 130, 130);
+            color: rgb(97, 71, 189);
+            padding: 5px 15px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 2px 2px;
+            cursor: pointer;
+            border-radius: 25px;
+        }
   </style>
 </head>
 
 <body>
+  <a href="pagina1.html"><button>Voltar</button></a>
 
 
   <header style="background-color: rgba(99, 25, 25, 1);">
